Add ProductServiceTest Unit Tests.